// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInfosGenerales /> should render 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est le type du contrat de travail ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CDD"
        />
        <span>
          Contrat à durée déterminée (CDD)
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CTT"
        />
        <span>
          Contrat de travail temporaire (Contrat d’intérim)
        </span>
      </label>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CDD 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

.c6 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 1rem;
  margin-right: 2rem;
}

.c4 {
  margin: 2rem 0;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est le type du contrat de travail ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          checked=""
          name="contractType"
          type="radio"
          value="CDD"
        />
        <span>
          Contrat à durée déterminée (CDD)
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CTT"
        />
        <span>
          Contrat de travail temporaire (Contrat d’intérim)
        </span>
      </label>
    </div>
    <div
      class="c4"
    >
      <label
        class="c5"
        for="input-criteria.cddType"
      >
        Quelle est le type du cdd ?
      </label>
      <select
        class="c6"
        id="input-criteria.cddType"
        name="criteria.cddType"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="CDD saisonnier"
        >
          CDD saisonnier
        </option>
        <option
          value="CDD d'usage"
        >
          CDD d'usage
        </option>
        <option
          value="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
        >
          CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires
        </option>
        <option
          value="CCD dans le cadre d’un congé de mobilité"
        >
          CCD dans le cadre d’un congé de mobilité
        </option>
        <option
          value="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
        >
          Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)
        </option>
        <option
          value="Contrat de professionnalisation ou Contrat d’apprentissage"
        >
          Contrat de professionnalisation ou Contrat d’apprentissage
        </option>
        <option
          value="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
        >
          Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié
        </option>
        <option
          value="Autres"
        >
          Autres
        </option>
      </select>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CDD and not handled ccn 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

.c6 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 1rem;
  margin-right: 2rem;
}

.c4 {
  margin: 2rem 0;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est le type du contrat de travail ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          checked=""
          name="contractType"
          type="radio"
          value="CDD"
        />
        <span>
          Contrat à durée déterminée (CDD)
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CTT"
        />
        <span>
          Contrat de travail temporaire (Contrat d’intérim)
        </span>
      </label>
    </div>
    <div
      class="c4"
    >
      <label
        class="c5"
        for="input-criteria.cddType"
      >
        Quelle est le type du cdd ?
      </label>
      <select
        class="c6"
        id="input-criteria.cddType"
        name="criteria.cddType"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="CDD saisonnier"
        >
          CDD saisonnier
        </option>
        <option
          value="CDD d'usage"
        >
          CDD d'usage
        </option>
        <option
          value="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
        >
          CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires
        </option>
        <option
          value="CCD dans le cadre d’un congé de mobilité"
        >
          CCD dans le cadre d’un congé de mobilité
        </option>
        <option
          value="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
        >
          Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)
        </option>
        <option
          value="Contrat de professionnalisation ou Contrat d’apprentissage"
        >
          Contrat de professionnalisation ou Contrat d’apprentissage
        </option>
        <option
          value="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
        >
          Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié
        </option>
        <option
          value="Autres"
        >
          Autres
        </option>
      </select>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CTT 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est le type du contrat de travail ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CDD"
        />
        <span>
          Contrat à durée déterminée (CDD)
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          checked=""
          name="contractType"
          type="radio"
          value="CTT"
        />
        <span>
          Contrat de travail temporaire (Contrat d’intérim)
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      S’agit-il d’un contrat de mission-formation ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
      data-testid="cttFormation"
    >
      <label
        class="c3"
      >
        <input
          name="cttFormation"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="cttFormation"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      Le contrat d'intérim a-t-il été rompu avant la fin prévue pour une des raisons suivantes : la propre initiative du salarié, la faute grave du salarié, cas de force majeure&nsbp;?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
      data-testid="ruptureContratFauteGrave"
    >
      <label
        class="c3"
      >
        <input
          name="ruptureContratFauteGrave"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="ruptureContratFauteGrave"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      À la fin du contrat d'intérim, le salarié a-t-il été immédiatement embauché en CDI au sein de l'entreprise dans laquelle il effectuait sa mission ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
      data-testid="propositionCDIFinContrat"
    >
      <label
        class="c3"
      >
        <input
          name="propositionCDIFinContrat"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="propositionCDIFinContrat"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      Le salarié a-t-il refusé la mise en œuvre de la souplesse prévue dans le contrat d’intérim ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
      data-testid="refusSouplesse"
    >
      <label
        class="c3"
      >
        <input
          name="refusSouplesse"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="refusSouplesse"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;
